Updated font sizes

--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -9,6 +9,6 @@
   <p><em>- Your Coach</em></p>
 </div>
 
-<div class = "p-3 my-3">
+<div class = "fs-5 p-3 my-3">
   <%= link_to "Ask a new question", ask_path %>
 </div>
