--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,5 +1,5 @@
 <h1 class = "text-start display-4 m-3">Stupid Coaching</h1>
-<p class = "text-start m-3">Ask your coach anything:</p>
+<p class = "text-start fs-4 m-3">Ask your coach anything:</p>
 
 <form class = "text-start m-3 input-group py-2" action="/answer" data-turbo="false">
   <input class = "border border-grey rounded-start" style="width: 500px" type="text" name="question">
